--- a/Weather-App-main/src/App.css
+++ b/Weather-App-main/src/App.css
@@ -1,106 +1,125 @@
 
-
-.App {
-  text-align: center;
-}
-
-.date-display {
-  margin-top: 20px;
-  font-size: 38px;
-}
-
-.search-bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0;
-
-}
-
-.search-input {
-  border-radius: 3px;
-  padding: 10px;
-  font-size: 16px;
-  /* width: 800px; */
-
-}
-.search-button {
-  padding: 10px 20px;
-  font-size: 16px;
-  margin-left: 0px;
-  cursor: pointer;
-  height: 40px;
-}
-
-.toggle-unit, .toggle-forecast {
-  margin-left: 20px;
-  cursor: pointer;
-}
-
-.toggle {
-  display: inline-flex;
-  color: black;
-  align-items: center;
-  padding: 5px 10px;
-  border-radius: 20px;
-  background-color: #8accef;
-  transition: background-color 0.3s;
-}
-
-.toggle.active {
-  background-color: #007bff;
-  color: rgb(152, 188, 239);
-}
-
-.toggle-ball {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: #745bd1;
-  margin-right: 10px;
-  transition: transform 0.3s;
-}
-
-.toggle.active .toggle-ball {
-  transform: translateX(20px);
-}
-
-/* .weather-info, .historical-weather, .forecast-weather {
-  margin: 20px 0
-} */
-
-
-.weather-details {
-
-  /* box-sizing: border-box; */
-  /* border: white; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 10px 0;
-}
-
-.weather-details img {
-  width: 90px;
-  height: 90px;
-  margin-right: 10px;
-}
-
-.weather-details div {
-  margin-left: 10px;
-}
-
-.weather-details strong {
-  font-size: 24px;
-}  
-
-.weather-details  p{
-   font-size: 20px;
-}
-
-.side{
-  display: flex;
-  justify-content: space-evenly;
-}
-
+  .App {
+    text-align: center;
+    height: 100vh; /* Full height of the viewport */
+    width: 100vw;
+    /* background-image: url('https://www.shutterstock.com/shutterstock/videos/1092800857/thumb/1.jpg?ip=x480'); */
+    background-repeat: no-repeat;
+    background-size: cover; /* Cover the entire container */
+    background: linear-gradient(to bottom, rgb(150, 211, 230), rgb(214, 17, 214));
+  }
+  
+  .date-display {
+    margin-top: 20px;
+    font-size: 38px;
+  }
+  
+  .search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    padding-top: 60px;
+  }
+  
+  .search-input {
+    border-radius: 3px;
+    padding: 10px;
+    font-size: 16px;
+  }
+  
+  .search-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    margin-left: 0px;
+    cursor: pointer;
+    height: 40px;
+    border-radius: 3px;
+  }
+  
+  .toggle-unit, .toggle-forecast {
+    margin-left: 20px;
+    cursor: pointer;
+  }
+  
+  .toggle {
+    display: inline-flex;
+    color: black;
+    align-items: center;
+    padding: 5px 10px;
+    border-radius: 20px;
+    background-color: #fcfcb9;
+    transition: background-color 0.3s;
+  }
+  
+  .toggle.active {
+    background-color: hsl(60, 87%, 58%);
+    color: rgb(28, 28, 25);
+  }
+  
+  .toggle-ball {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    background-color: #407197;
+    margin-right: 10px;
+    transition: transform 0.3s;
+  }
+  
+  .toggle.active .toggle-ball {
+    transform: translateX(20px);
+  }
+  
+  .weather-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 380px;
+  }
+  
+  .weather-info h2 {
+    margin-left: 380px;
+  }
+  
+  .weather-details img {
+    width: 100px;
+    height: 100px;
+    margin-right: 10px;
+  }
+  
+  .weather-details div {
+    margin-left: 10px;
+  }
+  
+  .weather-details strong {
+    font-size: 40px;
+  }
+  
+  .weather-details p {
+    font-size: 20px;
+    font-weight: 40px;
+  }
+  
+  .side {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  .monthly-temperature-graph {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .monthly-temperature-graph h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+  }
+  
+  #temperatureChart {
+    width: 60%;
+  }
+  
