--- a/Weather-App-main/src/App.css
+++ b/Weather-App-main/src/App.css
@@ -1,9 +1,9 @@
 
   .App {
     text-align: center;
-    height: 100vh; /* Full height of the viewport */
+    height: 100vh; 
     width: 100vw;
-    /* background-image: url('https://www.shutterstock.com/shutterstock/videos/1092800857/thumb/1.jpg?ip=x480'); */
+    
     background-repeat: no-repeat;
     background-size: cover; /* Cover the entire container */
     background: linear-gradient(to bottom, rgb(150, 211, 230), rgb(214, 17, 214));
@@ -122,4 +122,7 @@
   #temperatureChart {
     width: 60%;
   }
+  
+
+
   
